--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,3 +44,9 @@ jobs:
       run: |
         pip install pytest
         pytest -v
+    - uses: iterative/setup-dvc@v1
+    - name: Get data
+      run: |
+        dvc pull
+      env:
+        GDRIVE_CREDENTIALS_DATA: $
