--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,18 +1,18 @@
 name: "Run tests"
 
-on:
+on: # events on which the worflow should be triggered and on which branches
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
-jobs:
+jobs: # what we want to do with the test
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }} # specify operation system to run on it
     strategy:
       matrix:
         os: [ubuntu-20.04, macOS-10.15, windows-2019]
-    steps:
+    steps: # actual commands to run in the test workflow
     - name: Cache pip
       id: myCachePip
       uses: actions/cache@v2
@@ -44,9 +44,9 @@ jobs:
       run: |
         pip install pytest
         pytest -v
-    - uses: iterative/setup-dvc@v1
-    - name: Get data
-      run: |
+    - uses: iterative/setup-dvc@v1 # action
+    - name: Get data # action
+      run: | # command to run
         dvc pull
       env:
         GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
