--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = storage
+    remote = remote_storage
 ['remote "storage"']
     url = gdrive://1DmyAYFmVA-dYbbsh_WVSTdRmUjpFFcyM
+['remote "remote_storage"']
+    url = gs://dtumlops_koszyk/
